# AcousticVisualizer

./: .gitignore  CMakeLists.txt  README.md  pyrightconfig.json  use_python_acoustic.py
cmake/: FindMKL.cmake  configure_movecmd.cmake
config/: acoustic_config.json  acoustic_record_config.json  config.json  gen_sound0.ini  gen_sound370.ini  snisr_config.json
data/: sphere.mtl
data/shaders/: compile.bat  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
implot/: CMakeLists.txt
scripts/: step1_generate_ini.py  step2_collect_ini.py  template.ini
src/: main.cpp
src/app/: MainApp.cpp  MainApp.h
src/cameras/: ArcBallCamera.cpp  ArcBallCamera.h  CMakeLists.txt  CameraBase.cpp  CameraBase.h  CameraBuilder.cpp  CameraBuilder.h  CameraFactory.cpp  CameraFactory.h  FPSCamera.cpp  FPSCamera.h  OrthoCamera.cpp  OrthoCamera.h
src/geometries/: AABB.cpp  AABB.h  BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  ObjExport.cpp  ObjExport.h  ObjUtil.cpp  ObjUtil.h  ObjectBVH.cpp  ObjectBVH.h  Primitives.cpp  Primitives.h  TetUtil.cpp  TetUtil.h  Tetrahedron.h  Triangulator.cpp  Triangulator.h  TriangulatorDelaunay.cpp
src/io/: MatrixIO.cpp  TglMeshReader.hpp
src/modal/: ModalModel.cpp  ModalModel.h  ModalShape.cpp  ModalShape.h
src/modal_geometry/: Tet.hpp  TriangleMesh.hpp  tritri.cpp
src/protobuf/: CMakeLists.txt  gen_moments.cpp
src/sc/: Matrix3.hpp  SphericalFunc.hpp  eig3.cpp  eig3.h
src/scenes/: BoundingVolume2D.cpp  BoundingVolume2D.h  CMakeLists.txt  DrawScene.cpp  DrawScene.h  DrawSceneImGUI.cpp  DrawSceneImGUI.h  DrawSceneShot.cpp  DrawSceneVk.cpp  Raycaster.cpp  Raycaster.h  Scene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h  SimCallback.cpp  SimCallback.h  SimScene.cpp  SimScene.h  SimStateMachine.cpp  SimStateMachine.h  TextureManager.cpp  TextureManager.h
src/sim/: AcousticBody.cpp  AcousticBody.h  AcousticBodyBind.cpp  AcousticManager.cpp  AcousticManager.h  AudioOutput.cpp  AudioOutput.h  AudioProducer.cpp  AudioProducer.h  AudioWave.cpp  AudioWave.h  BaseObject.cpp  BaseObject.h  CMakeLists.txt  KinematicBody.cpp  KinematicBody.h  KinematicBodyBuilder.cpp  KinematicBodyBuilder.h  Perturb.cpp  Perturb.h  SNISR_DebugDraw.cpp  SNISR_DebugDraw.h  SimObjectBuilder.cpp  SimObjectBuilder.h
src/transfer/: BoundaryIntegralTransfer.hpp  FMMBoundIntTransfer.hpp  FMMTransferEval.cpp  FMMTransferEval.h  HelmholtzBasis.h  HelmholtzBasis.hpp  HelmholtzSolutions.hpp
src/utils/: BaseTypeUtil.h  CMakeLists.txt  ColorUtil.h  DefUtil.h  EigenUtil.cpp  EigenUtil.h  FileUtil.cpp  FileUtil.h  ImGuiUtil.cpp  ImGuiUtil.h  JsonUtil.cpp  JsonUtil.h  LogUtil.cpp  LogUtil.h  MathUtil.cpp  MathUtil.h  MathUtil2.cpp  ProfUtil.cpp  ProfUtil.h  Rand.cpp  Rand.h  RenderGrid.cpp  RenderUtil.cpp  RenderUtil.h  RotUtil.cpp  RotUtil.h  SparseUtil.h  StringUtil.cpp  StringUtil.h  TimeUtil.cpp  TimeUtil.hpp  macros.h  math.hpp  strings.cpp  strings.hpp
src/utils/json/: CMakeLists.txt
